# tetris_bot_v2

./: CMakeLists.txt  README.md  build.sh  input.txt  main.s  main2.s  perf.data  seccomp-perf.json
.devcontainer/: Dockerfile  devcontainer.json
Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  tetris_bot_v2
Release/: CMakeCache.txt  Makefile  cmake_install.cmake  tetris_bot_v2
include/: Board.hpp  Chromosome.hpp  Evolution.hpp  GeneticAlgorithm.hpp  Parameter.hpp  Population.hpp  Randomize.hpp  Tetrimino.hpp  Unchecked_Variant.hpp  constants.hpp  constexpr_func_arr.hpp  helpers.hpp  tetris.hpp
src/: main.cpp
